# AvrBasics

./: CMakeLists.txt  push.sh
inc/: usart.h
src/: main.cpp
